--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
 <body>
     <div class="container">
         <header>
+            <button class="theme-toggle" id="theme-toggle">
+                <i class="fas fa-sun"></i> Light Mode
+            </button>
             <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div>
                     <h1><i class="fas fa-certificate"></i> mkcert Web UI</h1>
