bugfixes, style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div id="auth-controls" style="display: none;">
                     <span id="username-display" style="margin-right: 15px; color: var(--secondary-color);"></span>
-                    <button id="logout-btn" class="btn btn-secondary">
+                    <button id="logout-btn" class="btn btn-logout">
                         <i class="fas fa-sign-out-alt"></i> Logout
                     </button>
                 </div>
@@ -76,7 +76,7 @@
         <section class="certificates-section">
             <h2><i class="fas fa-list"></i> Existing Certificates</h2>
             <div class="certificates-controls">
-                <button id="refresh-btn" class="btn btn-secondary">
+                <button id="refresh-btn" class="btn btn-refresh">
                     <i class="fas fa-sync-alt"></i> Refresh
                 </button>
             </div>
