route fixes and api reconnection

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         </section>
 
         <!-- Root CA Section -->
-        <section class="rootca-section" id="rootca-section" style="display: none;">
+        <section class="rootca-section" id="rootca-section">
             <h2><i class="fas fa-shield-alt"></i> Root Certificate Authority</h2>
             <div id="rootca-info" class="rootca-card">
                 <div class="loading">
